Add readme and name whale-id

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -265,7 +265,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "180/307 [================>.............] - ETA: 35:39 - loss: 8.0540 - acc: 0.0839"
+      "172/307 [===============>..............] - ETA: 37:57 - loss: 8.0499 - acc: 0.0850"
      ]
     }
    ],
