Add top labels by image count selection

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -26,7 +26,12 @@
     "df = df[df.Id != 'new_whale']\n",
     "\n",
     "# use targets with 3+ samples\n",
-    "df = df.groupby(\"Id\").filter(lambda x: len(x) >= 10)\n",
+    "df = df.groupby(\"Id\").filter(lambda x: len(x) >= 3)\n",
+    "\n",
+    "# Use top N targets by image count\n",
+    "value_counts = df.Id.value_counts()\n",
+    "top_hitters = value_counts.nlargest(10).index\n",
+    "df = df[df['Id'].isin(top_hitters)]\n",
     "\n",
     "classes = df.Id.unique()\n",
     "num_classes = len(classes)\n",
@@ -264,7 +269,7 @@
     "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=20, verbose=1, mode='auto')\n",
     "\n",
     "model.fit_generator(generator=train_generator,\n",
-    "                    epochs=100,\n",
+    "                    epochs=1,\n",
     "                    steps_per_epoch = int(len(X_train)/batch_size),\n",
     "                    validation_data=valid_generator, \n",
     "                    validation_steps = int(len(X_valid)/batch_size),\n",
