Use more classes

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -266,10 +266,10 @@
     "checkpointer = ModelCheckpoint(filepath=best_weights_path, verbose=1, save_best_only=True)\n",
     "\n",
     "# Stop the training if the model shows no improvement \n",
-    "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=20, verbose=1, mode='auto')\n",
+    "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=100, verbose=1, mode='auto')\n",
     "\n",
     "model.fit_generator(generator=train_generator,\n",
-    "                    epochs=1,\n",
+    "                    epochs=1000,\n",
     "                    steps_per_epoch = int(len(X_train)/batch_size),\n",
     "                    validation_data=valid_generator, \n",
     "                    validation_steps = int(len(X_valid)/batch_size),\n",
@@ -428,9 +428,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "whale-flukes",
+   "display_name": "whale-id",
    "language": "python",
-   "name": "whale-flukes"
+   "name": "whale-id"
   },
   "language_info": {
    "codemirror_mode": {
