add some image stats

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -18,8 +18,17 @@
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "from sklearn.model_selection import GroupShuffleSplit\n",
+    "from IPython.display import display # Allows the use of display() for DataFrames\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline\n",
     "\n",
     "df = pd.read_csv(\"train.csv\", header = 0)\n",
+    "display(df.std())\n",
+    "\n",
+    "#sns.pairplot(df, palette='Set1', hue='income')\n",
+    "\n",
     "total_images = len(df)\n",
     "\n",
     "# drop rows with new_whale because it is used to label various unknown flukes yet\n",
@@ -33,11 +42,14 @@
     "top_hitters = value_counts.nlargest(10).index\n",
     "df = df[df['Id'].isin(top_hitters)]\n",
     "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_ylabel(\"Whales\")\n",
+    "ax.set_xlabel(\"Images per whale\")\n",
+    "value_counts.hist(ax=ax,figsize=(20,5),bins=10, bottom=1)\n",
+    "\n",
     "classes = df.Id.unique()\n",
     "num_classes = len(classes)\n",
-    "\n",
-    "with pd.option_context('display.max_rows', 2, 'display.max_columns', 2):\n",
-    "    print(df)\n",
     "\n",
     "X_train = []\n",
     "y_train = []\n",
@@ -63,14 +75,19 @@
     "    y_train.extend(y_train_whale)\n",
     "    X_valid.extend(X_valid_whale)\n",
     "    y_valid.extend(y_valid_whale)\n",
-    "    \n",
+    "\n",
+    "#sns.pairplot(df, palette='Set1', hue='income')\n",
+    "\n",
     "print('\\nThere are %d total images.' % total_images)\n",
     "print(\"Trainable...\")\n",
     "print('There are %d total classes.' % num_classes)\n",
     "\n",
     "print('There are %d training images.' % len(X_train))\n",
     "print('There are %d validation images.' % len(X_valid))\n",
-    "print('There are %d test images.' % len(X_test))"
+    "print('There are %d test images.' % len(X_test))\n",
+    "\n",
+    "print(\"After data filtering\")\n",
+    "df.describe()"
    ]
   },
   {
