--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -24,10 +24,10 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
+    "np.random.seed(100)\n",
+    "\n",
     "df = pd.read_csv(\"train.csv\", header = 0)\n",
     "display(df.std())\n",
-    "\n",
-    "#sns.pairplot(df, palette='Set1', hue='income')\n",
     "\n",
     "total_images = len(df)\n",
     "\n",
@@ -39,7 +39,7 @@
     "\n",
     "# Use top N targets by image count\n",
     "value_counts = df.Id.value_counts()\n",
-    "top_hitters = value_counts.nlargest(10).index\n",
+    "top_hitters = value_counts.nlargest(20).index\n",
     "df = df[df['Id'].isin(top_hitters)]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -51,12 +51,11 @@
     "classes = df.Id.unique()\n",
     "num_classes = len(classes)\n",
     "\n",
-    "X_train = []\n",
-    "y_train = []\n",
-    "X_test = []\n",
-    "y_test = []\n",
-    "X_valid = []\n",
-    "y_valid = []\n",
+    "X_train = []; y_train = []\n",
+    "\n",
+    "X_test = []; y_test = []\n",
+    "\n",
+    "X_valid = []; y_valid = []\n",
     "\n",
     "for whale_id in classes:\n",
     "    df_whale = df[df.Id == whale_id]\n",
@@ -76,8 +75,6 @@
     "    X_valid.extend(X_valid_whale)\n",
     "    y_valid.extend(y_valid_whale)\n",
     "\n",
-    "#sns.pairplot(df, palette='Set1', hue='income')\n",
-    "\n",
     "print('\\nThere are %d total images.' % total_images)\n",
     "print(\"Trainable...\")\n",
     "print('There are %d total classes.' % num_classes)\n",
@@ -87,14 +84,17 @@
     "print('There are %d test images.' % len(X_test))\n",
     "\n",
     "print(\"After data filtering\")\n",
-    "df.describe()"
+    "\n",
+    "df.describe()\n",
+    "\n",
+    "workers = 8"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize the First 8 Training Images"
+    "# Visualize the 12 random training Images"
    ]
   },
   {
@@ -105,16 +105,20 @@
    "source": [
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
+    "import random\n",
     "%matplotlib inline\n",
     "\n",
     "def visualize_img(img_path, ax):\n",
     "    img = cv2.imread(img_path)\n",
     "    ax.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
     "    \n",
-    "fig = plt.figure(figsize=(20, 10))\n",
-    "for i in range(8):\n",
+    "fig = plt.figure(figsize=(50, 30))\n",
+    "\n",
+    "num_images = 12\n",
+    "rand_images = random.sample(X_train, num_images)\n",
+    "for i in range(num_images):\n",
     "    ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
-    "    visualize_img(X_train[i], ax)"
+    "    visualize_img(rand_images[i], ax)"
    ]
   },
   {
@@ -160,6 +164,7 @@
    "outputs": [],
    "source": [
     "from keras.applications.inception_resnet_v2 import InceptionResNetV2\n",
+    "from keras.applications.vgg16 import VGG16\n",
     "\n",
     "# define InceptionResNetV2 model\n",
     "image_side_size = 299\n",
@@ -167,11 +172,13 @@
     "base_model = InceptionResNetV2(weights='imagenet', include_top=False,\n",
     "                          input_tensor=None, input_shape = image_dim, \n",
     "                          pooling=None)\n",
+    "\n",
+    "# freeze weights in all layers of the base model\n",
     "for layer in base_model.layers:\n",
     "    layer.trainable = False\n",
     "                      \n",
     "# Train several last layers in base model\n",
-    "# for layer in base_model.layers[-22:]:\n",
+    "# for layer in base_model.layers[-3:]:\n",
     "#     layer.trainable = True\n",
     "    \n",
     "#base_model.summary()"
@@ -181,53 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Top layer specific to our problem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.models import Sequential, Model\n",
-    "from keras.layers import Dropout, Flatten, Dense, GlobalAveragePooling2D\n",
-    "\n",
-    "# add a global spatial average pooling layer\n",
-    "x = base_model.output\n",
-    "x = GlobalAveragePooling2D()(x)\n",
-    "x = Dense(512, activation=\"relu\")(x)\n",
-    "x = Dropout(0.2)(x)\n",
-    "x = Dense(512, activation=\"relu\")(x)\n",
-    "x = Dropout(0.2)(x)\n",
-    "\n",
-    "predictions = Dense(num_classes, activation='softmax')(x)\n",
-    "# this is the model we will train\n",
-    "model = Model(inputs=base_model.input, outputs=predictions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Compile model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.compile(loss='categorical_crossentropy', optimizer='rmsprop', \n",
-    "                  metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Define image generators"
+    "# Define training and validation image generators"
    ]
   },
   {
@@ -238,17 +199,18 @@
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "batch_size = 32\n",
+    "batch_size = 1\n",
     "target_size = (image_side_size, image_side_size)\n",
     "\n",
     "train_datagen = ImageDataGenerator(\n",
     "        rescale=1./255,\n",
-    "        horizontal_flip=True,\n",
+    "        horizontal_flip=False,\n",
     "        vertical_flip=True,\n",
     "        rotation_range=40,\n",
     "        width_shift_range=0.2,\n",
     "        height_shift_range=0.2,\n",
     "        zoom_range=0.2,\n",
+    "        shear_range=0.2,\n",
     "        fill_mode='nearest')\n",
     "\n",
     "valid_datagen = ImageDataGenerator(rescale=1./255)\n",
@@ -257,47 +219,25 @@
     "train_generator = train_datagen.flow_from_directory(\n",
     "        'data/train',\n",
     "        target_size = target_size,\n",
-    "        class_mode = 'categorical',\n",
     "        batch_size = batch_size,\n",
-    "        shuffle=True)\n",
+    "        class_mode=None,\n",
+    "        shuffle=False)\n",
     "\n",
     "print(\"Valid generator\")\n",
     "valid_generator = valid_datagen.flow_from_directory(\n",
     "        'data/valid',\n",
     "        target_size = target_size,\n",
-    "        class_mode = 'categorical',\n",
-    "        batch_size = batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-    "\n",
-    "best_weights_path='whale.flukes.weights.best.hdf5'\n",
-    "\n",
-    "# train the model\n",
-    "checkpointer = ModelCheckpoint(filepath=best_weights_path, verbose=1, save_best_only=True)\n",
-    "\n",
-    "# Stop the training if the model shows no improvement \n",
-    "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=100, verbose=1, mode='auto')\n",
-    "\n",
-    "model.fit_generator(generator=train_generator,\n",
-    "                    epochs=1000,\n",
-    "                    steps_per_epoch = int(len(X_train)/batch_size),\n",
-    "                    validation_data=valid_generator, \n",
-    "                    validation_steps = int(len(X_valid)/batch_size),\n",
-    "                    callbacks=[checkpointer, stopper], verbose=1, workers=8)\n"
+    "        class_mode = None,\n",
+    "        batch_size = batch_size,\n",
+    "        shuffle=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the Model with the Best Validation Loss"
+    "# Record bottleneck features of the base pre-trained model\n",
+    "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html"
    ]
   },
   {
@@ -306,7 +246,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(best_weights_path)"
+    "bottleneck_features_train = base_model.predict_generator(\n",
+    "    train_generator, \n",
+    "    workers=workers, verbose=1, \n",
+    "    steps=train_generator.samples//batch_size)\n",
+    "\n",
+    "# save the output as a Numpy array\n",
+    "np.save('bottleneck_features_train.npy', bottleneck_features_train)\n",
+    "\n",
+    "bottleneck_features_validation = base_model.predict_generator(\n",
+    "    valid_generator,\n",
+    "    workers=workers, verbose=1, \n",
+    "    steps=valid_generator.samples//batch_size)\n",
+    "\n",
+    "np.save('bottleneck_features_validation.npy', bottleneck_features_validation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train top level dense layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.layers import Dropout, Flatten, Dense, GlobalAveragePooling2D\n",
+    "from keras import utils as np_utils\n",
+    "\n",
+    "train_data = np.load('bottleneck_features_train.npy')\n",
+    "validation_data = np.load('bottleneck_features_validation.npy')\n",
+    "\n",
+    "top_model = Sequential()\n",
+    "top_model.add(Flatten(input_shape=train_data.shape[1:]))\n",
+    "top_model.add(Dense(256, activation='relu'))\n",
+    "top_model.add(Dropout(0.5))\n",
+    "top_model.add(Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "top_model.compile(optimizer='rmsprop',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "#model.summary()\n",
+    "\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "\n",
+    "best_weights_path='whale.flukes.weights.best.hdf5'\n",
+    "\n",
+    "checkpointer = ModelCheckpoint(filepath=best_weights_path, verbose=1, save_best_only=True)\n",
+    "\n",
+    "# Stop the training if the model shows no improvement \n",
+    "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=25, verbose=1, mode='auto')\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "top_model.fit(x=train_data,  \n",
+    "          y=np_utils.to_categorical(label_encoder.fit_transform(y_train)),\n",
+    "          epochs=100,\n",
+    "          batch_size=32,\n",
+    "          callbacks=[checkpointer, stopper],\n",
+    "          validation_data=(validation_data, \n",
+    "                           np_utils.to_categorical(\n",
+    "                               label_encoder.fit_transform(y_valid))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tune final model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import optimizers\n",
+    "\n",
+    "top_model.load_weights(best_weights_path)\n",
+    "\n",
+    "model = Model(input=base_model.input, \n",
+    "              output=top_model(base_model.output))\n",
+    "\n",
+    "layers_to_freeze = len(model.layers) - len(top_model.layers)\n",
+    "\n",
+    "print(f\"Freezing {layers_to_freeze} layers\")\n",
+    "\n",
+    "for layer in model.layers[:layers_to_freeze]:\n",
+    "    layer.trainable = False\n",
+    "for layer in model.layers[layers_to_freeze:]:\n",
+    "    layer.trainable = True\n",
+    "    \n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=optimizers.SGD(lr=1e-4, momentum=0.9),\n",
+    "              metrics=['accuracy'])\n",
+    "#model.summary()\n",
+    "\n",
+    "print(\"Traning dataset...\")\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "        'data/train',\n",
+    "        target_size = target_size,\n",
+    "        batch_size = batch_size,\n",
+    "        class_mode=\"categorical\",\n",
+    "        shuffle=False)\n",
+    "\n",
+    "print(\"Validation dataset...\")\n",
+    "valid_generator = valid_datagen.flow_from_directory(\n",
+    "        'data/valid',\n",
+    "        target_size = target_size,\n",
+    "        class_mode = \"categorical\",\n",
+    "        batch_size = batch_size,\n",
+    "        shuffle=False)\n",
+    "\n",
+    "batch_size = 32\n",
+    "\n",
+    "tuned_checkpointer = ModelCheckpoint(filepath='whale.flukes.weights.tuned.hdf5', \n",
+    "                                     verbose=1, \n",
+    "                                     save_best_only=True)\n",
+    "\n",
+    "stopper = EarlyStopping(monitor='val_loss', \n",
+    "                        min_delta=0.005, \n",
+    "                        patience=20, \n",
+    "                        verbose=1, \n",
+    "                        mode='auto')\n",
+    "\n",
+    "model.fit_generator(generator=train_generator,\n",
+    "                    epochs=50,\n",
+    "                    steps_per_epoch = int(len(X_train)//batch_size),\n",
+    "                    validation_data=valid_generator, \n",
+    "                    validation_steps = int(len(X_valid)//batch_size),\n",
+    "                    callbacks=[tuned_checkpointer, stopper],\n",
+    "                    verbose=1, workers=workers)\n"
    ]
   },
   {
@@ -319,10 +396,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "workers = 8\n",
+    "from keras.models import load_model\n",
+    "\n",
+    "model = load_model('whale.flukes.weights.tuned.hdf5')\n",
+    "#model.summary()\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale=1. / 255)\n",
     "\n",
@@ -334,15 +416,22 @@
     "\n",
     "score = model.evaluate_generator(\n",
     "    generator=test_generator, \n",
-    "    steps=len(X_test)/batch_size,\n",
+    "    #steps=len(test_generator.classes)//min(len(test_generator.classes),32),\n",
     "    workers=workers)\n",
     "\n",
     "print(\"Loss: \", score[0], \"Accuracy: \", score[1])\n",
     "\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    \"data/test\",\n",
+    "    target_size=target_size,\n",
+    "    batch_size=batch_size,\n",
+    "    class_mode='categorical', shuffle=False)\n",
+    "\n",
     "scores = model.predict_generator(\n",
     "    generator=test_generator, \n",
-    "    steps=len(X_test)/batch_size,\n",
-    "    workers=workers)"
+    "    workers=workers,\n",
+    "    batch_size=batch_size,\n",
+    "    verbose=1)"
    ]
   },
   {
@@ -393,15 +482,17 @@
     "    plt.ylabel('True label')\n",
     "    plt.xlabel('Predicted label')\n",
     "\n",
+    "print(len(list(map(lambda x: np.argmax(x), scores))))\n",
+    "\n",
     "cnf_matrix = confusion_matrix(test_generator.classes, list(map(lambda x: np.argmax(x), scores)))\n",
     "np.set_printoptions(precision=2)\n",
     "\n",
     "# Plot non-normalized confusion matrix\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(70,10))\n",
     "plot_confusion_matrix(cnf_matrix, classes=classes, title='Confusion matrix, without normalization')\n",
     "\n",
     "# Plot normalized confusion matrix\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(70,10))\n",
     "plot_confusion_matrix(cnf_matrix, classes=classes, normalize=True, title='Normalized confusion matrix')\n",
     "\n",
     "plt.show()"
@@ -445,9 +536,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "whale-id",
+   "display_name": "whale-flukes",
    "language": "python",
-   "name": "whale-id"
+   "name": "whale-flukes"
   },
   "language_info": {
    "codemirror_mode": {
