Runs but result is bad

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "# Use top N targets by image count\n",
     "value_counts = df.Id.value_counts()\n",
-    "top_hitters = value_counts.nlargest(20).index\n",
+    "top_hitters = value_counts.nlargest(10).index\n",
     "df = df[df['Id'].isin(top_hitters)]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -87,7 +87,8 @@
     "\n",
     "df.describe()\n",
     "\n",
-    "workers = 8"
+    "workers = 8\n",
+    "batch_size = 32"
    ]
   },
   {
@@ -199,7 +200,6 @@
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "batch_size = 1\n",
     "target_size = (image_side_size, image_side_size)\n",
     "\n",
     "train_datagen = ImageDataGenerator(\n",
@@ -219,7 +219,7 @@
     "train_generator = train_datagen.flow_from_directory(\n",
     "        'data/train',\n",
     "        target_size = target_size,\n",
-    "        batch_size = batch_size,\n",
+    "        batch_size = 1,\n",
     "        class_mode=None,\n",
     "        shuffle=False)\n",
     "\n",
@@ -228,7 +228,7 @@
     "        'data/valid',\n",
     "        target_size = target_size,\n",
     "        class_mode = None,\n",
-    "        batch_size = batch_size,\n",
+    "        batch_size = 1,\n",
     "        shuffle=False)"
    ]
   },
@@ -237,7 +237,13 @@
    "metadata": {},
    "source": [
     "# Record bottleneck features of the base pre-trained model\n",
-    "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html"
+    "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html\n",
+    "\n",
+    "https://medium.com/@galen.ballew/transferlearning-b65772083b47\n",
+    "\n",
+    "https://github.com/galenballew/transfer-learning/blob/master/inception_bottleneck.ipynb\n",
+    "\n",
+    "https://www.tensorflow.org/tutorials/image_retraining#bottlenecks"
    ]
   },
   {
@@ -249,7 +255,7 @@
     "bottleneck_features_train = base_model.predict_generator(\n",
     "    train_generator, \n",
     "    workers=workers, verbose=1, \n",
-    "    steps=train_generator.samples//batch_size)\n",
+    "    steps=train_generator.samples)\n",
     "\n",
     "# save the output as a Numpy array\n",
     "np.save('bottleneck_features_train.npy', bottleneck_features_train)\n",
@@ -257,7 +263,7 @@
     "bottleneck_features_validation = base_model.predict_generator(\n",
     "    valid_generator,\n",
     "    workers=workers, verbose=1, \n",
-    "    steps=valid_generator.samples//batch_size)\n",
+    "    steps=valid_generator.samples)\n",
     "\n",
     "np.save('bottleneck_features_validation.npy', bottleneck_features_validation)"
    ]
@@ -285,7 +291,9 @@
     "\n",
     "top_model = Sequential()\n",
     "top_model.add(Flatten(input_shape=train_data.shape[1:]))\n",
-    "top_model.add(Dense(256, activation='relu'))\n",
+    "top_model.add(Dense(4096, activation='relu'))\n",
+    "top_model.add(Dropout(0.5))\n",
+    "top_model.add(Dense(4096, activation='relu'))\n",
     "top_model.add(Dropout(0.5))\n",
     "top_model.add(Dense(num_classes, activation='softmax'))\n",
     "\n",
@@ -298,17 +306,23 @@
     "\n",
     "best_weights_path='whale.flukes.weights.best.hdf5'\n",
     "\n",
-    "checkpointer = ModelCheckpoint(filepath=best_weights_path, verbose=1, save_best_only=True)\n",
+    "checkpointer = ModelCheckpoint(filepath=best_weights_path, \n",
+    "                               verbose=1, \n",
+    "                               save_best_only=True)\n",
     "\n",
     "# Stop the training if the model shows no improvement \n",
-    "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=25, verbose=1, mode='auto')\n",
+    "stopper = EarlyStopping(monitor='val_loss', \n",
+    "                        min_delta=0.005, \n",
+    "                        patience=100, \n",
+    "                        verbose=1, \n",
+    "                        mode='auto')\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
     "\n",
-    "top_model.fit(x=train_data,  \n",
-    "          y=np_utils.to_categorical(label_encoder.fit_transform(y_train)),\n",
-    "          epochs=100,\n",
-    "          batch_size=32,\n",
+    "top_model.fit(train_data,  \n",
+    "          np_utils.to_categorical(label_encoder.fit_transform(y_train)),\n",
+    "          epochs=1000,\n",
+    "          batch_size=batch_size,\n",
     "          callbacks=[checkpointer, stopper],\n",
     "          validation_data=(validation_data, \n",
     "                           np_utils.to_categorical(\n",
@@ -365,8 +379,6 @@
     "        batch_size = batch_size,\n",
     "        shuffle=False)\n",
     "\n",
-    "batch_size = 32\n",
-    "\n",
     "tuned_checkpointer = ModelCheckpoint(filepath='whale.flukes.weights.tuned.hdf5', \n",
     "                                     verbose=1, \n",
     "                                     save_best_only=True)\n",
@@ -421,16 +433,9 @@
     "\n",
     "print(\"Loss: \", score[0], \"Accuracy: \", score[1])\n",
     "\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    \"data/test\",\n",
-    "    target_size=target_size,\n",
-    "    batch_size=batch_size,\n",
-    "    class_mode='categorical', shuffle=False)\n",
-    "\n",
     "scores = model.predict_generator(\n",
     "    generator=test_generator, \n",
     "    workers=workers,\n",
-    "    batch_size=batch_size,\n",
     "    verbose=1)"
    ]
   },
