show a whale images

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize the First 12 Training Images"
+    "# Visualize 12 random training images"
    ]
   },
   {
@@ -124,9 +124,36 @@
     "\n",
     "num_images = 12\n",
     "rand_images = random.sample(X_train, num_images)\n",
-    "for i in range(num_images):\n",
+    "\n",
+    "for i, file in enumerate(rand_images):\n",
     "    ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
-    "    visualize_img(rand_images[i], ax)"
+    "    visualize_img(file, ax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize random whale from top hitters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_whale = random.sample(list(top_hitters),1)\n",
+    "print(random_whale)\n",
+    "\n",
+    "whale_images = list(df[df['Id'].isin(random_whale)]['Image'])\n",
+    "files = [s for s in X_train if any(w in s for w in whale_images)]\n",
+    "\n",
+    "fig = plt.figure(figsize=(50, 30))\n",
+    "\n",
+    "for i, file in enumerate(files):\n",
+    "    ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
+    "    visualize_img(file, ax)"
    ]
   },
   {
