Use all classes

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -39,12 +39,14 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"train.csv\", header = 0)\n",
-    "display(df.std())\n",
     "\n",
     "total_images = len(df)\n",
     "\n",
     "# drop rows with new_whale because it is used to label various unknown flukes yet\n",
     "df = df[df.Id != 'new_whale']\n",
+    "\n",
+    "# under represented targets\n",
+    "df_under_targets = df.groupby(\"Id\").filter(lambda x: len(x) < 3)\n",
     "\n",
     "# use targets with 3+ samples\n",
     "df = df.groupby(\"Id\").filter(lambda x: len(x) >= 3)\n",
@@ -52,6 +54,7 @@
     "# Use top N targets by image count\n",
     "value_counts = df.Id.value_counts()\n",
     "top_hitters = value_counts.nlargest(60).index\n",
+    "\n",
     "df = df[df['Id'].isin(top_hitters)]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -95,9 +98,12 @@
     "print('There are %d validation images.' % len(X_valid))\n",
     "print('There are %d test images.' % len(X_test))\n",
     "\n",
-    "print(\"After data filtering\")\n",
+    "print(\"\\nAfter data filtering\")\n",
     "\n",
-    "df.describe()\n",
+    "print(df.describe())\n",
+    "\n",
+    "print(\"\\nUnder represented targets\")\n",
+    "print(df_under_targets.describe())\n",
     "\n",
     "workers = 8\n",
     "batch_size = 32"
@@ -119,15 +125,17 @@
     "def visualize_img(img_path, ax):\n",
     "    img = cv2.imread(img_path)\n",
     "    ax.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
-    "    \n",
+    "\n",
+    "def plot_images(fig, images):\n",
+    "    for i, file in enumerate(images):\n",
+    "        ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
+    "        visualize_img(file, ax)\n",
+    "        \n",
     "fig = plt.figure(figsize=(50, 30))\n",
     "\n",
-    "num_images = 12\n",
-    "rand_images = random.sample(X_train, num_images)\n",
+    "rand_images = random.sample(X_train, 12)\n",
     "\n",
-    "for i, file in enumerate(rand_images):\n",
-    "    ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
-    "    visualize_img(file, ax)"
+    "plot_images(fig, rand_images)"
    ]
   },
   {
@@ -144,16 +152,128 @@
    "outputs": [],
    "source": [
     "random_whale = random.sample(list(top_hitters),1)\n",
-    "print(random_whale)\n",
+    "print(f'Whale: {random_whale}')\n",
     "\n",
     "whale_images = list(df[df['Id'].isin(random_whale)]['Image'])\n",
     "files = [s for s in X_train if any(w in s for w in whale_images)]\n",
     "\n",
     "fig = plt.figure(figsize=(50, 30))\n",
+    "plot_images(fig, files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulate under represented images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "\n",
-    "for i, file in enumerate(files):\n",
-    "    ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
-    "    visualize_img(file, ax)"
+    "# datagen = ImageDataGenerator(\n",
+    "#         rotation_range=30,\n",
+    "#         width_shift_range=0.2,\n",
+    "#         height_shift_range=0.2,\n",
+    "#         shear_range=0.2,\n",
+    "#         zoom_range=0.2,\n",
+    "#         horizontal_flip=False,\n",
+    "#         fill_mode='nearest')\n",
+    "\n",
+    "# for index, row in df_under_targets.iterrows():\n",
+    "#     file = row['Image']\n",
+    "#     id = row['Id']\n",
+    "    \n",
+    "#     img = load_img(f'train/{file}')\n",
+    "#     img = img_to_array(img) \n",
+    "#     img = img.reshape((1,) + img.shape)\n",
+    "\n",
+    "#     # the .flow() command below generates batches of randomly transformed images\n",
+    "#     i = 0\n",
+    "#     for batch in datagen.flow(img,\n",
+    "#                               batch_size=1,\n",
+    "#                               save_to_dir='augmented', \n",
+    "#                               save_prefix=f'{id}', \n",
+    "#                               save_format='jpeg'):\n",
+    "#         i += 1\n",
+    "#         if i > 5:\n",
+    "#             break  # otherwise the generator would loop indefinitely"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build labeled list of augmented images for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import csv\n",
+    "import ntpath\n",
+    "\n",
+    "with open('train_augmented.csv', 'w') as csvfile:\n",
+    "    fieldnames = ['Image', 'Id']\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "\n",
+    "    writer.writeheader()\n",
+    "    augmented_list = glob.glob(\"augmented/*.jpeg\")\n",
+    "\n",
+    "    for file in augmented_list:\n",
+    "        base_name = os.path.basename(file)\n",
+    "        writer.writerow(dict(zip(fieldnames,[base_name, \"_\".join(base_name.split(\"_\", 2)[:2])])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_augmented = pd.read_csv(\"train_augmented.csv\", header = 0)\n",
+    "\n",
+    "total_augmented_images = len(df_augmented)\n",
+    "\n",
+    "classes_augmented = df_augmented.Id.unique()\n",
+    "num_augmented_classes = len(classes_augmented)\n",
+    "\n",
+    "for whale_id in classes_augmented:\n",
+    "    df_whale = df_augmented[df_augmented.Id == whale_id]\n",
+    "    \n",
+    "    X_whale = np.array([os.path.join(os.getcwd(), 'augmented', s) for s in df_whale.Image])\n",
+    "    y_whale = np.array(df_whale.Id.values)\n",
+    "    \n",
+    "    X_train_whale, X_test_whale, y_train_whale, y_test_whale = \\\n",
+    "        train_test_split(X_whale, y_whale, test_size=0.2, random_state=1)\n",
+    "    X_test.extend(X_test_whale)\n",
+    "    y_test.extend(y_test_whale)\n",
+    "    \n",
+    "    X_train_whale, X_valid_whale, y_train_whale, y_valid_whale = \\\n",
+    "        train_test_split(X_train_whale, y_train_whale, test_size=0.2, random_state=1)\n",
+    "    X_train.extend(X_train_whale)\n",
+    "    y_train.extend(y_train_whale)\n",
+    "    X_valid.extend(X_valid_whale)\n",
+    "    y_valid.extend(y_valid_whale)\n",
+    "\n",
+    "print('\\nThere are %d total augmented images.' % total_augmented_images)\n",
+    "print('There are %d total augmented classes.' % num_augmented_classes)\n",
+    "\n",
+    "print('There are %d training images.' % len(X_train))\n",
+    "print('There are %d validation images.' % len(X_valid))\n",
+    "print('There are %d test images.' % len(X_test))\n",
+    "\n",
+    "num_classes += num_augmented_classes\n",
+    "print('There are %d total classes.' % num_classes)"
    ]
   },
   {
@@ -347,7 +467,7 @@
     "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=100, verbose=1, mode='auto')\n",
     "\n",
     "model.fit_generator(generator=train_generator,\n",
-    "                    epochs=1000,\n",
+    "                    epochs=1,\n",
     "                    steps_per_epoch = len(X_train)//batch_size,\n",
     "                    validation_data=valid_generator, \n",
     "                    validation_steps = len(X_valid)//batch_size,\n",
