before all classes

--- a/whale-id.ipynb
+++ b/whale-id.ipynb
@@ -51,14 +51,15 @@
     "\n",
     "# Use top N targets by image count\n",
     "value_counts = df.Id.value_counts()\n",
-    "top_hitters = value_counts.nlargest(60).index\n",
+    "top_hitters = value_counts.nlargest(100).index\n",
     "df = df[df['Id'].isin(top_hitters)]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.set_yscale('log')\n",
+    "ax.set_xscale('log')\n",
     "ax.set_ylabel(\"Whales\")\n",
     "ax.set_xlabel(\"Images per whale\")\n",
-    "value_counts.hist(ax=ax,figsize=(20,5),bins=10, bottom=1)\n",
+    "value_counts.hist(ax=ax, figsize=(20,5), bins=100, bottom=1)\n",
     "\n",
     "classes = df.Id.unique()\n",
     "num_classes = len(classes)\n",
@@ -99,8 +100,10 @@
     "\n",
     "df.describe()\n",
     "\n",
+    "#print(classes)\n",
+    "\n",
     "workers = 8\n",
-    "batch_size = 32"
+    "batch_size = 128"
    ]
   },
   {
@@ -151,7 +154,7 @@
     "\n",
     "fig = plt.figure(figsize=(50, 30))\n",
     "\n",
-    "for i, file in enumerate(files):\n",
+    "for i, file in enumerate(files[:12]):\n",
     "    ax = fig.add_subplot(3, 4, i + 1, xticks=[], yticks=[])\n",
     "    visualize_img(file, ax)"
    ]
@@ -194,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.applications.inception_resnet_v2 import InceptionResNetV2\n",
+    "#from keras.applications.inception_resnet_v2 import InceptionResNetV2\n",
     "from keras.applications.vgg16 import VGG16\n",
     "from keras.applications.vgg19 import VGG19\n",
     "from keras.models import Model\n",
@@ -202,10 +205,10 @@
     "#define VGG19 model\n",
     "image_side_size = 150\n",
     "image_dim = (image_side_size, image_side_size, 3)\n",
-    "base_model = VGG19(weights='imagenet', include_top=False,\n",
+    "base_model = VGG16(weights='imagenet', include_top=False,\n",
     "                          input_tensor=None, input_shape=image_dim, \n",
     "                          pooling=None)\n",
-    "cut_off_layer = base_model.get_layer('block4_pool')\n",
+    "cut_off_layer = base_model.get_layer('block4_conv3')\n",
     "\n",
     "# define InceptionResNetV2 model\n",
     "# image_side_size = 299\n",
@@ -281,7 +284,7 @@
     "\n",
     "model.compile(loss='categorical_crossentropy', \n",
     "              optimizer=RMSprop(lr=0.0001), \n",
-    "              metrics=['accuracy'])"
+    "              metrics=['accuracy','mean_squared_error'])"
    ]
   },
   {
@@ -336,24 +339,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard, ReduceLROnPlateau\n",
+    "from time import time\n",
     "\n",
-    "best_weights_path='whale.flukes.weights.best.hdf5'\n",
+    "best_weights_path=f'whale.flukes.{num_classes}_classes.weights.best.hdf5'\n",
     "\n",
     "# train the model\n",
     "checkpointer = ModelCheckpoint(filepath=best_weights_path, verbose=1, save_best_only=True)\n",
     "\n",
     "# Stop the training if the model shows no improvement \n",
-    "stopper = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=100, verbose=1, mode='auto')\n",
+    "stopper = EarlyStopping(monitor='val_loss', \n",
+    "                        min_delta=0.005, \n",
+    "                        patience=50, \n",
+    "                        verbose=1, \n",
+    "                        mode='auto')\n",
+    "\n",
+    "# Reduce learning rate when a metric has stopped improving.\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', \n",
+    "                             factor=0.7,\n",
+    "                             patience=10,\n",
+    "                             min_lr=0.0000001,\n",
+    "                             verbose=1)\n",
+    "\n",
+    "tensorboard = TensorBoard(log_dir=\"./logs/final/{}\".format(time()),\n",
+    "                          batch_size=batch_size,\n",
+    "                          write_graph=True,\n",
+    "                          write_images=True,\n",
+    "                          histogram_freq=0,\n",
+    "                          write_grads=True)\n",
     "\n",
     "model.fit_generator(generator=train_generator,\n",
-    "                    epochs=1000,\n",
+    "                    epochs=100,\n",
     "                    steps_per_epoch = len(X_train)//batch_size,\n",
     "                    validation_data=valid_generator, \n",
     "                    validation_steps = len(X_valid)//batch_size,\n",
-    "                    callbacks=[checkpointer, stopper, \n",
+    "                    callbacks=[checkpointer, stopper, reduce_lr,\n",
     "                               PlotLossesKeras(), \n",
-    "                               TensorBoard(log_dir='./logs', batch_size=batch_size)], \n",
+    "                               tensorboard],\n",
     "                    verbose=1, workers=workers)\n"
    ]
   },
