--- a/classify.ipynb
+++ b/classify.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import load_model\n",
-    "model = load_model('whale.flukes.10_classes.weights.best.hdf5')"
+    "model = load_model('whale.flukes.3354_classes.weights.best.hdf5')"
    ]
   },
   {
@@ -19,16 +27,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. ... 0. 0. 0.]\n",
+      "(9, 8, 7, 6, 5, 4, 3, 2, 1, 0)\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing import image\n",
     "import numpy as np\n",
     "from keras.applications.vgg19 import VGG19, preprocess_input, decode_predictions\n",
     "\n",
     "target_size = (150, 150)\n",
-    "test_image= image.load_img('train/fe4c0693.jpg', target_size = target_size) \n",
+    "# new whale\n",
+    "# test_image= image.load_img('train/fe4c0693.jpg', target_size = target_size) \n",
+    "# 0014cfdf w_f22f3e3\n",
+    "test_image= image.load_img('train/0014cfdf.jpg', target_size = target_size) \n",
+    "\n",
     "test_image = image.img_to_array(test_image)\n",
     "test_image = np.expand_dims(test_image, axis = 0)\n",
     "test_image = preprocess_input(test_image)\n",
@@ -36,8 +58,9 @@
     "result = model.predict(test_image)\n",
     "\n",
     "print(result[0])\n",
-    "_, sorted_classes = zip(*sorted(zip(result[0], range(5)), reverse=True))\n",
-    "print(sorted_classes)"
+    "_, sorted_classes = zip(*sorted(zip(result[0], range(10)), reverse=True))\n",
+    "print(sorted_classes)\n",
+    "print(result[0][9])"
    ]
   },
   {
