Isolate training a bit

--- a/whale-id-all.ipynb
+++ b/whale-id-all.ipynb
@@ -106,10 +106,7 @@
     "print(df.describe())\n",
     "\n",
     "print(\"\\nUnder represented targets\")\n",
-    "print(df_under_targets.describe())\n",
-    "\n",
-    "workers = 8\n",
-    "batch_size = 64"
+    "print(df_under_targets.describe())"
    ]
   },
   {
@@ -325,6 +322,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Define image generators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "batch_size = 64\n",
+    "image_side_size = 150\n",
+    "\n",
+    "target_size = (image_side_size, image_side_size)\n",
+    "\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "        rescale=1./255,\n",
+    "        horizontal_flip=True,\n",
+    "        vertical_flip=True,\n",
+    "        rotation_range=40,\n",
+    "        width_shift_range=0.2,\n",
+    "        height_shift_range=0.2,\n",
+    "        zoom_range=0.2,\n",
+    "        shear_range=0.2,\n",
+    "        fill_mode='nearest')\n",
+    "\n",
+    "valid_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "print(\"Train generator\")\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "        'data/train',\n",
+    "        target_size = target_size,\n",
+    "        class_mode = 'categorical',\n",
+    "        batch_size = batch_size,\n",
+    "        shuffle=True)\n",
+    "\n",
+    "print(\"Valid generator\")\n",
+    "valid_generator = valid_datagen.flow_from_directory(\n",
+    "        'data/valid',\n",
+    "        target_size = target_size,\n",
+    "        class_mode = 'categorical',\n",
+    "        batch_size = batch_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load CNN without top layer"
    ]
   },
@@ -340,7 +386,6 @@
     "from keras.models import Model\n",
     "\n",
     "# define base model\n",
-    "image_side_size = 150\n",
     "image_dim = (image_side_size, image_side_size, 3)\n",
     "base_model = VGG16(weights='imagenet', include_top=False,\n",
     "                          input_tensor=None, input_shape=image_dim, \n",
@@ -398,7 +443,11 @@
     "x = Dense(512, activation=\"relu\")(x)\n",
     "x = Dropout(0.2)(x)\n",
     "\n",
+    "num_classes = len(np.unique(train_generator.classes))\n",
+    "train_examples = len(train_generator.classes)\n",
+    "\n",
     "predictions = Dense(num_classes, activation='softmax')(x)\n",
+    "\n",
     "# this is the model we will train\n",
     "model = Model(inputs=base_model.input, outputs=predictions)"
    ]
@@ -424,52 +473,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Define image generators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "\n",
-    "target_size = (image_side_size, image_side_size)\n",
-    "\n",
-    "train_datagen = ImageDataGenerator(\n",
-    "        rescale=1./255,\n",
-    "        horizontal_flip=True,\n",
-    "        vertical_flip=True,\n",
-    "        rotation_range=40,\n",
-    "        width_shift_range=0.2,\n",
-    "        height_shift_range=0.2,\n",
-    "        zoom_range=0.2,\n",
-    "        shear_range=0.2,\n",
-    "        fill_mode='nearest')\n",
-    "\n",
-    "valid_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "\n",
-    "print(\"Train generator\")\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "        'data/train',\n",
-    "        target_size = target_size,\n",
-    "        class_mode = 'categorical',\n",
-    "        batch_size = batch_size,\n",
-    "        shuffle=True)\n",
-    "\n",
-    "print(\"Valid generator\")\n",
-    "valid_generator = valid_datagen.flow_from_directory(\n",
-    "        'data/valid',\n",
-    "        target_size = target_size,\n",
-    "        class_mode = 'categorical',\n",
-    "        batch_size = batch_size)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -477,6 +480,8 @@
    "source": [
     "from keras.callbacks import ModelCheckpoint, EarlyStopping, TensorBoard, ReduceLROnPlateau\n",
     "from time import time\n",
+    "\n",
+    "workers = 8\n",
     "\n",
     "best_weights_path=f'whale.flukes.{num_classes}_classes.weights.best.hdf5'\n",
     "\n",
@@ -505,10 +510,10 @@
     "                          write_grads=True)\n",
     "\n",
     "model.fit_generator(generator=train_generator,\n",
-    "                    epochs=10,\n",
-    "                    steps_per_epoch = len(X_train)//batch_size,\n",
+    "                    epochs=500,\n",
+    "                    steps_per_epoch = train_examples//batch_size,\n",
     "                    validation_data=valid_generator, \n",
-    "                    validation_steps = len(X_valid)//batch_size,\n",
+    "                    validation_steps = train_examples//batch_size,\n",
     "                    callbacks=[checkpointer, stopper, reduce_lr,\n",
     "                               PlotLossesKeras(), \n",
     "                               tensorboard],\n",
